--- a/templates/products.html
+++ b/templates/products.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+    <h1 align="center" style="margin: 20px;">{{ category }}</h1>
     <div class="w-75 p-3" style="border: 1px solid gray; border-radius: 10px; margin-top: 10px; background-color: #303434;">
         <div class="row row-cols-1 row-cols-md-4 g-4">
             {% for product in products %}
